--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     translate: (50%, 50%);
     clip-path: circle(50%);
     overflow: hidden;
+    background-color: white;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
   }
 </style>
 
