--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     width: 1000vh;
     height: auto;
     position: absolute;
+    top: 0;
+    left: 0;
   }
   .grass {
     width: 30vh;
@@ -27,6 +29,5 @@
 </style>
 
 <script>
-  document.getElementById("grassImg").style.top = 50 + Math.random() * 950 + "vh";
-  document.getElementById("grassImg").style.left = 50 + Math.random() * 950 + "vh";
+
 </script>
