--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    translate: (50%, 50%);
+    translate: (50, 50);
     clip-path: circle(50%);
     overflow: hidden;
     background-color: white;
