--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
+<div class="topScreen">
 <div class="grass">
   <img class="grassImg" id="grassImg" src="IMG_7990.png">
 </div>
+</div>
 
 <style>
+  .topScreen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%:
+    height: 50%;
+  }
   .grassImg {
     width: 1000vh;
     height: auto;
@@ -16,7 +25,6 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    translate: (50, 50);
     clip-path: circle(50%);
     overflow: hidden;
     background-color: white;
