--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     left: 50%;
     top: 50%;
     clip-path: circle(50%);
+    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
   }
