--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 </style>
 
 <script>
-
+  document.getElementById("grassImg").style.top = Math.random() * 360 + "vh";
+  document.getElementById("grassImg").style.left = Math.random() * 360 + "vh";
 </script>
