--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<html>
+<body>
 <div class="grass">
   <img class="grassImg" id="grassImg" src="IMG_7990.png">
 </div>
@@ -34,3 +35,5 @@
   document.getElementById("grassImg").style.top = Math.random() * 360 + "vh";
   document.getElementById("grassImg").style.left = Math.random() * 360 + "vh";
 </script>
+</body>
+</html>
