--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
-  ctx.drawImage(img, 0, 0, 2 * window.innerHeight, 2 * window.innerHeight * (4102 / 3973);
+  ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
 </script>
 </body>
 </html>
