--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
-  ctx.drawImage(img, 0, 0, c.width, c.height);
+  ctx.drawImage(img, 0, 0, c.width, c.width * (4102 / 3973));
 </script>
 </body>
 </html>
