--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 2;
   }
   .grassImg {
     width: 200vh;
@@ -23,6 +24,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 3;
   }
   .grass {
     width: 40vh;
