--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
-<body>
+<body onload="findSpawnPoint()">
 <img src="IMG_7994.png" height="0" width="0" id="ref">
 <div class="grass">
   <img class="spawnpoint" src="IMG_7996.png">
