--- a/index.html
+++ b/index.html
@@ -64,11 +64,20 @@
   ctx.drawImage(img, 0, 0, c.width, c.width * (4102 / 3973));
   function findSpawnPoint() {
     sp = document.getElementsByClassName("spawnpoint")[0];
-    Spleft = 30 + Math.round(Math.random() * 40) + "%";
-    Sptop = 15 + Math.round(Math.random() * 40) + "%";
-    sp.style.left = Spleft;
-    sp.style.top = Sptop;
-    ctx.getImageData(top + Sptop, left + Spleft * (window.innerHeight / window.innerWidth), 1, 1);
+    Spleft = 30 + Math.round(Math.random() * 40);
+    Sptop = 15 + Math.round(Math.random() * 40);
+    sp.style.left = Spleft + "%";
+    sp.style.top = Sptop + "%";
+    imgData = ctx.getImageData(top + Sptop, left + Spleft * (window.innerHeight / window.innerWidth), 1, 1);
+    alpha = imgData[3];
+    while (alpha == 0) {
+      Spleft = 30 + Math.round(Math.random() * 40);
+      Sptop = 15 + Math.round(Math.random() * 40);
+      sp.style.left = Spleft + "%";
+      sp.style.top = Sptop + "%";
+      imgData = ctx.getImageData(top + Sptop, left + Spleft * (window.innerHeight / window.innerWidth), 1, 1);
+      alpha = imgData[3];
+    }
   }
 </script>
 </body>
