--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </style>
 
 <script>
-  top = Math.random() * ((4102 / 3973) * -160) + "vh";
+  top = Math.random() * -160 + "vh";
   left = Math.random() * -160 + "vh";
   document.getElementById("grassImg").style.top = top;
   document.getElementById("grassImg").style.left = left;
