--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
     Sptop = 15 + Math.round(Math.random() * 40);
     sp.style.left = Spleft + "%";
     sp.style.top = Sptop + "%";
-    imgData = ctx.getImageData((top * -1) + Sptop, (left * -1) + Spleft * (window.innerHeight / window.innerWidth), 1, 1);
+    imgData = ctx.getImageData((top * -1 * window.innerHeight / 100 * 2) + Sptop * 2, (left * -1 * window.innerHeight / 100 * 2) + Spleft * 2 * (window.innerWidth / window.innerHeight), 1, 1);
     alpha = imgData[3];
     while (alpha == 0) {
       Spleft = 30 + Math.round(Math.random() * 40);
       Sptop = 15 + Math.round(Math.random() * 40);
       sp.style.left = Spleft + "%";
       sp.style.top = Sptop + "%";
-      imgData = ctx.getImageData((top * -1) + Sptop, (left * -1) + Spleft * (window.innerWidth / window.innerHeight), 1, 1);
+      imgData = ctx.getImageData((top * -1 * window.innerHeight / 100 * 2) + Sptop * 2, (left * -1 * window.innerHeight / 100 * 2) + Spleft * 2 * (window.innerWidth / window.innerHeight), 1, 1);
       alpha = imgData[3];
     }
   }
