--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   }
   .testCan {
     width: 200vh;
-    heigt: auto;
+    height: 200vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -27,7 +27,7 @@
   }
   .grassImg {
     width: 200vh;
-    height: auto;
+    height: 200vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -68,15 +68,18 @@
     Sptop = 15 + Math.round(Math.random() * 40);
     sp.style.left = Spleft + "%";
     sp.style.top = Sptop + "%";
-    imgData = ctx.getImageData((top * -1 * window.innerHeight / 50) + Sptop * 2, (left * -1 * window.innerHeight / 100 * 2) + Spleft * 2 * (window.innerWidth / window.innerHeight), 1, 1);
-    alert([(top * -1 * window.innerHeight / 50) + Sptop * 2, (left * -1 * window.innerHeight / 100 * 2) + Spleft * 2 * (window.innerWidth / window.innerHeight), 1, 1]);
+    cWid = c.getBoundingClientRect.width;
+    cHei = c.getBoundingClientRect.height;
+    imgData = ctx.getImageData(cWid * ((top * -1 + Sptop) / 200), cHei * ((left * -1 + Spleft) / 200), 1, 1);
     alpha = imgData[3];
     while (alpha != 100) {
       Spleft = 30 + Math.round(Math.random() * 40);
       Sptop = 15 + Math.round(Math.random() * 40);
       sp.style.left = Spleft + "%";
       sp.style.top = Sptop + "%";
-      imgData = ctx.getImageData((top * -1 * window.innerHeight / 50) + Sptop * 2, (left * -1 * window.innerHeight / 100 * 2) + Spleft * 2 * (window.innerWidth / window.innerHeight), 1, 1);
+      cWid = c.getBoundingClientRect.width;
+      cHei = c.getBoundingClientRect.height;
+      imgData = ctx.getImageData(cWid * ((top * -1 + Sptop) / 200), cHei * ((left * -1 + Spleft) / 200), 1, 1);
       alpha = imgData[3];
     }
   }
