--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
-  ctx.drawImage(img, 0, 0, c.width, c.width * (4102 / 3973));
+  ctx.drawImage(img, 0, 0, c.width, c.height);
   function findSpawnPoint() {
     sp = document.getElementsByClassName("spawnpoint")[0];
     Spleft = 30 + Math.round(Math.random() * 40);
