--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
   document.getElementById("grassImg").style.left = left;
   document.getElementById("testCan").style.top = top;
   document.getElementById("testCan").style.left = left;
+  document.getElementById("testCan").style.width = window.innerHeight * 2;
+  document.getElementById("testCan").style.height = window.innerHeight * 2;
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
