--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   left = Math.random() * -160 + "vh";
   document.getElementById("grassImg").style.top = top;
   document.getElementById("grassImg").style.left = left;
-  document.getElementById("testCan").style.top = window.innerHeight * top / 10 + "px";
-  document.getElementById("testCan").style.left = window.innerHeight * left / 10 + "px";
+  document.getElementById("testCan").style.top = top;
+  document.getElementById("testCan").style.left = left;
   document.getElementById("testCan").width = window.innerHeight * 2;
   document.getElementById("testCan").height = window.innerHeight * 2;
   document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
