--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
-  ctx.drawImage(img, 0, 0, c.width, c.height);
+  ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
   function findSpawnPoint() {
     totalTopOffset = top / 10 * window.innerHeight + Math.round(Math.random() * 40);
     totalLeftOffset = left / 10 * window.innerHeight + Math.round(Math.random() * 40);
