--- a/index.html
+++ b/index.html
@@ -67,9 +67,19 @@
   img = document.getElementById("ref");
   ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
   function findSpawnPoint() {
-    totalTopOffset = top / 10 * window.innerHeight + Math.round(Math.random() * 40);
-    totalLeftOffset = left / 10 * window.innerHeight + Math.round(Math.random() * 40);
-    
+  alpha = 0;
+  while (alpha != 255) {
+    totalTopOffset = Math.round((top * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
+    totalLeftOffset = Math.round((left * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
+    alpha = 0;
+    imgData = ctx.getImageData(totalLeftOffset, totalTopOffset, 4, 4);
+    for (i = 0; i < 4; i++) {
+      alpha += imgData[4 * i - 1];
+    }
+    alpha = alpha / 4;
+  }
+  document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (top / -100 * window.innerHeight)) * window.innerHeight;
+  document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight;
   }
 </script>
 </body>
