--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     }
     alpha = alpha / 4;
   }
-  document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (top / -100 * window.innerHeight)) * window.innerHeight;
-  document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight;
+  document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (top / -100 * window.innerHeight)) * window.innerHeight + "px";
+  document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
   }
 </script>
 </body>
