--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   img = document.getElementById("ref");
   ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
   function findSpawnPoint() {
+  try {
   alpha = 0;
   while (alpha != 255) {
     totalTopOffset = Math.round((top * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
@@ -77,6 +78,9 @@
       alpha += imgData[4 * i - 1];
     }
     alpha = alpha / 4;
+  } catch(err) {
+    alert(err);
+  }
   }
   document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (top / -100 * window.innerHeight)) * window.innerHeight + "px";
   document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
