--- a/index.html
+++ b/index.html
@@ -78,12 +78,10 @@
       alpha += imgData[4 * i - 1];
     }
     alpha = alpha / 4;
-  } catch(err) {
-    alert(err);
-  }
-  }
+    }
   document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (top / -100 * window.innerHeight)) * window.innerHeight + "px";
   document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
+  } catch(err) { alert(err); }
   }
 </script>
 </body>
