--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 <script>
   topA = Math.random() * -160;
   left = Math.random() * -160;
-  document.getElementById("grassImg").style.top = top + "vh";
+  document.getElementById("grassImg").style.top = topA + "vh";
   document.getElementById("grassImg").style.left = left + "vh";
-  document.getElementById("testCan").style.top = top + "vh";
+  document.getElementById("testCan").style.top = topA + "vh";
   document.getElementById("testCan").style.left = left + "vh";
   document.getElementById("testCan").width = window.innerHeight * 2;
   document.getElementById("testCan").height = window.innerHeight * 2;
