--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   img = document.getElementById("ref");
   ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
   alpha = 0;
-  //while (alpha != 255) {
+  while (alpha != 255) {
     totalTopOffset = Math.round((topA * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
     totalLeftOffset = Math.round((left * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
     alpha = 0;
@@ -77,7 +77,7 @@
       alert(alpha);
     }
     alpha = alpha / 16;
-  //}
+  }
   document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (topA / -100 * window.innerHeight)) * window.innerHeight + "px";
   document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
   }
