--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     for (i = 1; i < 17; i++) {
       alpha += imgData[4 * i - 1];
       alert(alpha);
+      alert(totalLeftOffset);
+      alert(c.style.width);
+      alert(totalTopOffset);
+      alert(c.style.height);
     }
     alpha = alpha / 16;
   }
