--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     imgData = ctx.getImageData(totalLeftOffset, totalTopOffset, 4, 4);
     for (i = 1; i < 17; i++) {
       alpha += imgData[(4 * i) - 1];
-      alert(totalTopOffset < c.height);
-      alert(totalLeftOffset < c.width);
+      alert(imgData[(4 * i) - 1]);
     }
     alpha = alpha / 16;
   }
