--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
-<body >
+<body onload="onload()">
 <img src="IMG_7994.png" height="0" width="0" id="ref">
 <div class="grass">
   <img class="spawnpoint" src="IMG_7996.png">
@@ -66,7 +66,7 @@
   ctx = c.getContext("2d");
   img = document.getElementById("ref");
   ctx.drawImage(img, 0, 0, c.style.width, c.style.height);
-  setTimeout() {function() {
+  function onload() {
   alpha = 0;
   while (alpha != 255) {
     totalTopOffset = Math.round((topA * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
@@ -81,7 +81,7 @@
   }
   document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (topA / -100 * window.innerHeight)) * window.innerHeight + "px";
   document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
-  }, 1000);
+  }
 </script>
 </body>
 </html>
