--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body onload="onload()">
 <img src="IMG_7994.png" height="0" width="0" id="ref">
 <div class="grass">
-  <img class="spawnpoint" src="IMG_7996.png">
+  <img id="spawnpoint" class="spawnpoint" src="IMG_7996.png">
   <img class="grassImg" id="grassImg" src="IMG_7993.png">
   <canvas class="testCan" id="testCan" >Your browser does not support the HTML canvas tag.</canvas>
 </div>
