--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   left = Math.random() * -160;
   document.getElementById("grassImg").style.top = topA + "vh";
   document.getElementById("grassImg").style.left = left + "vh";
+  document.getElementById("grassImg").style.width = window.innerHeight * 2;
+  document.getElementById("grassImg").style.height = window.innerHeight * 2;
   document.getElementById("testCan").style.top = topA + "vh";
   document.getElementById("testCan").style.left = left + "vh";
   document.getElementById("testCan").width = window.innerHeight * 2;
