--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 <script>
   topA = Math.random() * -160;
   left = Math.random() * -160;
-  document.getElementById("grassImg").style.top = topA * window.innerHeight + "px";
-  document.getElementById("grassImg").style.left = left * window.innerHeight + "px";
+  document.getElementById("grassImg").style.top = topA / 100 * window.innerHeight + "px";
+  document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
   document.getElementById("grassImg").style.width = window.innerHeight * 2 + "px";
   document.getElementById("grassImg").style.height = window.innerHeight * 2 + "px";
-  document.getElementById("testCan").style.top = topA * window.innerHeight + "px";
-  document.getElementById("testCan").style.left = left * window.innerHeight + "px";
+  document.getElementById("testCan").style.top = topA / 100 * window.innerHeight + "px";
+  document.getElementById("testCan").style.left = left / 100 * window.innerHeight + "px";
   document.getElementById("testCan").width = window.innerHeight * 2;
   document.getElementById("testCan").height = window.innerHeight * 2;
   document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
