--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <style>
   .spawnpoint {
     width: 1vh;
-    height: auto;
-    position: absolute;
+    height: 1vh;
+    position: fixed;
     z-index: 4;
   }
   .testCan {
@@ -73,8 +73,10 @@
   setTimeout(function() {
   alpha = 0;
   while (alpha != 255) {
-    totalTopOffset = Math.round((topA * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
-    totalLeftOffset = Math.round((left * -1 + Math.round(Math.random() * 40)) / 100 * window.innerHeight);
+    rT = Math.round(Math.random() * 40);
+    rL = Math.round(Math.random() * 40);
+    totalTopOffset = Math.round((topA * -1 + rT) / 100 * window.innerHeight);
+    totalLeftOffset = Math.round((left * -1 + rL) / 100 * window.innerHeight);
     alpha = 0;
     imgData = ctx.getImageData(totalLeftOffset, totalTopOffset, 4, 4);
     alert(imgData.data);
@@ -83,8 +85,8 @@
     }
     alpha = alpha / 16;
   }
-  document.getElementById("spawnpoint").style.top = (0.15 + totalTopOffset - (topA / -100 * window.innerHeight)) * window.innerHeight + "px";
-  document.getElementById("spawnpoint").style.left = (0.3 + totalLeftOffset - (left / -100 * window.innerHeight)) * window.innerHeight + "px";
+  document.getElementById("spawnpoint").style.top = (0.15 + (rT / 100)) * window.innerHeight + "px";
+  document.getElementById("spawnpoint").style.left = (0.3 + (rL / 100)) * window.innerHeight + "px";
   }, 500);
   }
 </script>
