--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     alpha = alpha / 16;
   }
   document.getElementById("spawnpoint").style.top = (0.15 + (rT / 100)) * window.innerHeight + "px";
-  document.getElementById("spawnpoint").style.left = (0.3 + (rL / 100)) * window.innerHeight + "px";
+  document.getElementById("spawnpoint").style.left = (0.3 * (window.innerWidth / window.innerHeight) + (rL / 100)) * window.innerHeight + "px";
   }, 500);
   }
 </script>
