--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     }
     alpha = alpha / 16;
   }
-  document.getElementById("spawnpoint").style.top = (0.15 + (rT / 100)) * window.innerHeight + "px";
-  document.getElementById("spawnpoint").style.left = (0.3 * (window.innerWidth / window.innerHeight) + (rL / 100)) * window.innerHeight + "px";
+  document.getElementById("spawnpoint").style.top = rT / 40 * 100 + "%";
+  document.getElementById("spawnpoint").style.left = rL / 40 * 100 + "%";
   }, 500);
   }
 </script>
