--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     document.getElementById("testCan").height = window.innerHeight * 2;
     document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
     document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
+    ctx.drawImage(img, 0, 0, c.width, c.height);
   });
   c = document.getElementById("testCan");
   ctx = c.getContext("2d");
