--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   .testCan {
     width: 200vh;
     height: 200vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 2;
@@ -28,16 +28,16 @@
   .grassImg {
     width: 200vh;
     height: 200vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 3;
-    opacity: 1;
+    opacity: 0;
   }
   .grass {
     width: 40vh;
     height: 40vh;
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 35%;
     clip-path: circle(50%);
@@ -94,6 +94,7 @@
     imgData = ctx.getImageData(totalLeftOffset, totalTopOffset, 4, 4)
     for (i = 0; i < 16; i++) {
       alpha += imgData.data[(4 * i) + 3];
+      imgData.data[(4 * i) + 3] = 150;
     }
     alpha = alpha / 16;
   }
