--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   .grassImg {
     width: 200vh;
     height: 200vh;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 3;
