--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   .testCan {
     width: 200vh;
     height: 200vh;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
@@ -37,7 +37,7 @@
   .grass {
     width: 40vh;
     height: 40vh;
-    position: fixed;
+    position: absolute;
     left: 50%;
     top: 35%;
     clip-path: circle(50%);
