--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html>
 <body onload="onload()">
 <img src="IMG_7994.png" height="0" width="0" id="ref">
+<img src="IMG_7996.png" height="0" width="0" id="refSP">
 <div class="grass">
   <img id="spawnpoint" class="spawnpoint" src="IMG_7996.png">
   <img class="grassImg" id="grassImg" src="IMG_7993.png">
   <canvas class="testCan" id="testCan" >Your browser does not support the HTML canvas tag.</canvas>
+  <canvas id="planetSize">Your browser does not support the HTML canvas tag.</canvas>
 </div>
 
 
@@ -50,6 +52,13 @@
     padding: 0;
     background-color: black;
   }
+  #planetSize {
+    position: absolute;
+    left: 50%;
+    top: 35%;
+    width: 40vh;
+    height: 40vh;
+  }
 </style>
 
 <script>
@@ -65,6 +74,10 @@
   document.getElementById("testCan").height = window.innerHeight * 2;
   document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
   document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
+  document.getElementById("planetSize").style.width = window.innerHeight * 0.4 + "px";
+  document.getElementById("planetSize").style.height = window.innerHeight * 0.4 + "px";
+  document.getElementById("planetSize").width = window.innerHeight * 0.4;
+  document.getElementById("planetSize").height = window.innerHeight * 0.4;
   window.addEventListener("resize", function() {
     document.getElementById("grassImg").style.top = topA / 100 * window.innerHeight + "px";
     document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
@@ -76,16 +89,26 @@
     document.getElementById("testCan").height = window.innerHeight * 2;
     document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
     document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
+    document.getElementById("planetSize").style.width = window.innerHeight * 0.4 + "px";
+    document.getElementById("planetSize").style.height = window.innerHeight * 0.4 + "px";
+    document.getElementById("planetSize").width = window.innerHeight * 0.4;
+    document.getElementById("planetSize").height = window.innerHeight * 0.4;
     ctx.drawImage(img, 0, 0, c.width, c.height);
+    btx.drawImage(imgb, 0, 0, b.width, b.height);
   });
   c = document.getElementById("testCan");
+  b = document.getElementById("planetSize");
   ctx = c.getContext("2d");
+  btx = b.getContext("2d");
   img = document.getElementById("ref");
+  imgb = document.getElementById("refSP");
   function onload() {
   ctx.drawImage(img, 0, 0, c.width, c.height);
+  btx.drawImage(imgb, 0, 0, b.width, b.height);
   setTimeout(function() {
   alpha = 0;
-  while (alpha != 255) {
+  otp = false;
+  while (alpha != 255 && otp == true) {
     rT = Math.round(Math.random() * 40);
     rL = Math.round(Math.random() * 40);
     totalTopOffset = Math.round((topA * -1 + rT) / 100 * window.innerHeight);
@@ -97,6 +120,18 @@
       imgData.data[(4 * i) + 3] = 150;
     }
     alpha = alpha / 16;
+    redImgData = btx.getImageData(totalLeftOffset, totalTopOffset, 4, 4);
+    alpha2 = 0;
+    for (i = 0; i < 16; i++) {
+      alpha2 += imgData.data[(4 * i) + 3];
+      imgData.data[(4 * i) + 3] = 150;
+    }
+    alpha2 = alpha2 / 16;
+    if (alpha2 == 255) {
+      otp = true;
+    } else {
+      otp = false;
+    }
   }
   document.getElementById("spawnpoint").style.top = rT / 40 * 100 + "%";
   document.getElementById("spawnpoint").style.left = rL / 40 * 100 + "%";
