--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     top: 0%;
     width: 40vh;
     height: 40vh;
+    opacity: 1;
   }
 </style>
 
@@ -135,6 +136,7 @@
   }
   document.getElementById("spawnpoint").style.top = rT / 40 * 100 + "%";
   document.getElementById("spawnpoint").style.left = rL / 40 * 100 + "%";
+  document.getElementById("planetSize").style.opacity = 0;
   }, 500);
   }
 </script>
