--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
     redImgData = btx.getImageData(rT / 100 * window.innerHeight, rL / 100 * window.innerHeight, 4, 4);
     alpha2 = 0;
     for (i = 0; i < 16; i++) {
-      alpha2 += imgData.data[(4 * i) + 3];
-      imgData.data[(4 * i) + 3] = 150;
+      alpha2 += redImgData.data[(4 * i) + 3];
     }
     alpha2 = alpha2 / 16;
     if (alpha2 == 255) {
