--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     }
     alpha = alpha / 16;
     redImgData = btx.getImageData(rT / 100 * window.innerHeight, rL / 100 * window.innerHeight, 4, 4);
+    alert(redImgData.data);
     alpha2 = 0;
     for (i = 0; i < 16; i++) {
       alpha2 += redImgData.data[(4 * i) + 3];
