--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   setTimeout(function() {
   alpha = 0;
   otp = false;
-  while (alpha != 255 && otp == true) {
+  while (alpha != 255 && otp == false) {
     rT = Math.round(Math.random() * 40);
     rL = Math.round(Math.random() * 40);
     totalTopOffset = Math.round((topA * -1 + rT) / 100 * window.innerHeight);
@@ -122,7 +122,6 @@
     }
     alpha = alpha / 16;
     redImgData = btx.getImageData(rT / 100 * window.innerHeight, rL / 100 * window.innerHeight, 4, 4);
-    alert(redImgData.data);
     alpha2 = 0;
     for (i = 0; i < 16; i++) {
       alpha2 += redImgData.data[(4 * i) + 3];
