--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <img src="IMG_7994.png" height="0" width="0" id="ref">
 <img src="IMG_7996.png" height="0" width="0" id="refSP">
 <div class="grass">
+  <canvas id="biomes" class="biomes" src="IMG_8057.png">Your browser does not support the HTML canvas tag.</canvas>
   <img id="spawnpoint" class="spawnpoint" src="IMG_7996.png">
   <img class="grassImg" id="grassImg" src="IMG_8056.png">
   <canvas class="testCan" id="testCan" >Your browser does not support the HTML canvas tag.</canvas>
@@ -18,6 +19,14 @@
     height: 1vh;
     position: fixed;
     z-index: 4;
+  }
+  .biomes {
+    width: 200vh;
+    height: 200vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -20;
   }
   .testCan {
     width: 200vh;
@@ -75,37 +84,58 @@
   document.getElementById("testCan").height = window.innerHeight * 2;
   document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
   document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
+  document.getElementById("biomes").style.top = topA / 100 * window.innerHeight + "px";
+  document.getElementById("biomes").style.left = left / 100 * window.innerHeight + "px";
+  document.getElementById("biomes").width = window.innerHeight * 2;
+  document.getElementById("biomes").height = window.innerHeight * 2;
+  document.getElementById("biomes").style.width = window.innerHeight * 2 + "px";
+  document.getElementById("biomes").style.height = window.innerHeight * 2 + "px";
   document.getElementById("planetSize").style.width = window.innerHeight * 0.4 + "px";
   document.getElementById("planetSize").style.height = window.innerHeight * 0.4 + "px";
   document.getElementById("planetSize").width = window.innerHeight * 0.4;
   document.getElementById("planetSize").height = window.innerHeight * 0.4;
   window.addEventListener("resize", function() {
     document.getElementById("grassImg").style.top = topA / 100 * window.innerHeight + "px";
-    document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
-    document.getElementById("grassImg").style.width = window.innerHeight * 2 + "px";
-    document.getElementById("grassImg").style.height = window.innerHeight * 2 + "px";
-    document.getElementById("testCan").style.top = topA / 100 * window.innerHeight + "px";
-    document.getElementById("testCan").style.left = left / 100 * window.innerHeight + "px";
-    document.getElementById("testCan").width = window.innerHeight * 2;
-    document.getElementById("testCan").height = window.innerHeight * 2;
-    document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
-    document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
-    document.getElementById("planetSize").style.width = window.innerHeight * 0.4 + "px";
-    document.getElementById("planetSize").style.height = window.innerHeight * 0.4 + "px";
-    document.getElementById("planetSize").width = window.innerHeight * 0.4;
-    document.getElementById("planetSize").height = window.innerHeight * 0.4;
+  document.getElementById("grassImg").style.left = left / 100 * window.innerHeight + "px";
+  document.getElementById("grassImg").style.width = window.innerHeight * 2 + "px";
+  document.getElementById("grassImg").style.height = window.innerHeight * 2 + "px";
+  document.getElementById("testCan").style.top = topA / 100 * window.innerHeight + "px";
+  document.getElementById("testCan").style.left = left / 100 * window.innerHeight + "px";
+  document.getElementById("testCan").width = window.innerHeight * 2;
+  document.getElementById("testCan").height = window.innerHeight * 2;
+  document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
+  document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
+  document.getElementById("biomes").style.top = topA / 100 * window.innerHeight + "px";
+  document.getElementById("biomes").style.left = left / 100 * window.innerHeight + "px";
+  document.getElementById("biomes").width = window.innerHeight * 2;
+  document.getElementById("biomes").height = window.innerHeight * 2;
+  document.getElementById("biomes").style.width = window.innerHeight * 2 + "px";
+  document.getElementById("biomes").style.height = window.innerHeight * 2 + "px";
+  document.getElementById("planetSize").style.width = window.innerHeight * 0.4 + "px";
+  document.getElementById("planetSize").style.height = window.innerHeight * 0.4 + "px";
+  document.getElementById("planetSize").width = window.innerHeight * 0.4;
+  document.getElementById("planetSize").height = window.innerHeight * 0.4;
     ctx.drawImage(img, 0, 0, c.width, c.height);
     btx.drawImage(imgb, 0, 0, b.width, b.height);
+    biomesctx.drawImage(imgb, 0, 0, biome.width, biome.height);
   });
   c = document.getElementById("testCan");
   b = document.getElementById("planetSize");
+  biome = document.getElementById("biomes");
   ctx = c.getContext("2d");
+  biomesctx = biome.getContext("2d");
   btx = b.getContext("2d");
   img = document.getElementById("ref");
   imgb = document.getElementById("refSP");
   function onload() {
   ctx.drawImage(img, 0, 0, c.width, c.height);
-  btx.drawImage(imgb, 0, 0, b.width, b.height);
+  btx.drawImage(imgb, 0, 0, b.width, c.height);
+  biomesctx.drawImage(imgb, 0, 0, biome.width, biome.height);
+  document.getElementById("testCan").style.left = left / 100 * window.innerHeight + "px";
+  document.getElementById("testCan").width = window.innerHeight * 2;
+  document.getElementById("testCan").height = window.innerHeight * 2;
+  document.getElementById("testCan").style.width = window.innerHeight * 2 + "px";
+  document.getElementById("testCan").style.height = window.innerHeight * 2 + "px";
   setTimeout(function() {
   alpha = 0;
   otp = false;
