--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   document.getElementById("planetSize").height = window.innerHeight * 0.4;
     ctx.drawImage(img, 0, 0, c.width, c.height);
     btx.drawImage(imgb, 0, 0, b.width, b.height);
-    biomesctx.drawImage(imgb, 0, 0, biome.width, biome.height);
+    biomesctx.drawImage(imgc, 0, 0, biome.width, biome.height);
   });
   c = document.getElementById("testCan");
   b = document.getElementById("planetSize");
