--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
   <canvas class="testCan" id="testCan" >Your browser does not support the HTML canvas tag.</canvas>
   <canvas id="planetSize">Your browser does not support the HTML canvas tag.</canvas>
 </div>
+<div class="spaceBack"></div>
 
 <style>
+  .spaceBack {
+    background-image: url("IMG_8059.png");
+    background-size: cover;
+    background-position: 50%;
+    width: 100%;
+    height: 70%;
+    top: 0;
+    z-index: 0;
+    left: 0;
+    position: fixed;
+  }
   .spawnpoint {
     width: 1vh;
     height: 1vh;
