--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     clip-path: circle(50%);
     transform: translate(-50%, -50%);
     overflow: hidden;
+    z-index: 1;
     background-color: white;
   }
   body {
