--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   .grass {
     width: 40vh;
     height: 40vh;
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 35%;
     clip-path: circle(50%);
