--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     background-color: white;
     color: #0b0823;
     font-size: 2.5vw;
+    font-family: AnkaCoder;
   }
   .spaceBack {
     background-image: url("IMG_8059.png");
@@ -81,6 +82,10 @@
     width: 40vh;
     height: 40vh;
     opacity: 1;
+  }
+  @font-face {
+    font-family: AnkaCoder;
+    src: url("anka-coder.zip");
   }
 </style>
 
