--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   }
   @font-face {
     font-family: AnkaCoder;
-    src: url("anka-coder.zip");
+    src: url("FiraCode-Regular.otf");
   }
 </style>
 
