--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 <textarea id="input" class="codeSpace" placeholder="Type 'Create World' to begin..."></textarea>
 <style>
   .codeSpace {
-    width: 100%;
-    height: 30%;
+    width: 110%;
+    height: 40%;
+    overflow: hidden;
+    border-style: solid;
+    border-color: white;
+    border-width: 0.3vw;
     top: 70%;
-    left: 0;
+    left: -5%;
     position: fixed;
-    background-color: white;
-    color: #0b0823;
+    background-color: #0b0822;
+    color: white;
     font-size: 2.5vw;
     font-family: AnkaCoder;
   }
