--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     border-color: white;
     border-width: 0.15vw;
     top: 70%;
-    left: -5%;
+    left: 0;
     position: fixed;
     background-color: #0b0822;
     color: white;
