--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   if (event.key === "Enter") {
     newCode = input.value.substring(originalCode.length + 1);
     originalCode = input.value;
-    if (newCode.toLowerCase() == "Create World") {
+    if (newCode.toLowerCase() == "create world") {
       setTimeout(createWorld, 0);
     }
   });
