--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         break;
       }
       setTimeout(function() {
-        phaser.src = "Phase ".concat(i, ".png");
+        phaser.src = "Phase ".concat(i.toString(), ".png");
       }, (i - 2) * 100);
     }
   }
