--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
       setTimeout(createWorld, 0);
     }
   }
-  }
+  });
   function createWorld() {
     phaser = document.getElementById("phaser");
     for (i = 2; i < 25; i++) {
       if (i == 24) {
-        phaser.opacity = 0;
-        phaser.zIndex = -400;
+        phaser.style.opacity = 0;
+        phaser.style.zIndex = -400;
         break;
       }
       setTimeout(function() {
